Fixed stuck after signout

--- a/src/components/MyQuotes/MyCuotes.scss
+++ b/src/components/MyQuotes/MyCuotes.scss
@@ -4,6 +4,6 @@
     }
 
     .quoteCard {
-        margin-bottom: 2em;
+        margin-bottom: 3em;
     }
 }
